Windows ADB is working!